# scrshare

./: .gitignore  Makefile.CrossWindows  README  cross_win64.txt  meson.build  meson_options.txt
app/: meson.build
app/src/: compat.h  decoder.c  decoder.h  device.c  lock_util.h  log.c  log.h  main.c  net.c  net.h  receiver_server.c  receiver_server.h  scrshare.c  scrshare.h  server.c  server.h  stream.c  stream.h  video_buffer.c  video_buffer.h  video_server.c  video_server.h
prebuilt-deps/: Makefile
